networkout.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-out
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
